[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/FPS_Tracker.gd" type="Script" id=1]

[node name="FPS_Tracker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 268.0
margin_bottom = 21.0

[node name="Label_CurrentFPS" type="Label" parent="VBoxContainer"]
margin_right = 261.0
margin_bottom = 14.0
text = "Current FPS: 58"

[node name="Label_AverageFPS" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 261.0
margin_bottom = 32.0
text = "Average FPS: 58"

[node name="Label_SpikeFPS_1sec" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 261.0
margin_bottom = 50.0
text = "Spike FPS (worst FPS in last 10 seconds): "

[node name="Label_SpikeFPS_10sec" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 261.0
margin_bottom = 68.0
text = "Spike FPS (worst FPS in last 10 seconds): "

[node name="Label_WorstFPS" type="Label" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 261.0
margin_bottom = 86.0
text = "Worst FPS: "
